--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-mantine-shop",
+    "name": "react-redux-thunk",
     "private": true,
     "version": "0.0.0",
     "type": "module",
